# clickup-python-cli

./: README.md  pyproject.toml  skill.md
.github/workflows/: test.yml
src/clickup_cli/: __main__.py  cli.py  client.py  formatting.py
tests/: test_functional.py
