[project]
name = "clickup-cli"
version = "0.1.0"
description = "A thin CLI wrapper for the ClickUp API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
clickup = "clickup_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
